<resources>
    <string name="app_name">Pezesha Agent</string>

    <!-- Onboard Activity-->
    <string name="onboard_heading">Enabling SMEs towards financial success</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consent_received">Consent Received</string>
    <string name="proceed">Proceed</string>
    <string name="great_you_can_now_proceed_collecting_customer_details_for_scoring">Great!_You_can_now_proceed_collecting_customer_details_for_scoring</string>
    <string name="confirming_consent">Confirming Consent</string>
    <string name="confirm">Confirm</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_email_and_password_to_login">Enter your Email and Password to Login</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="email_address">Email Address</string>
    <string name="security_pin">Security PIN</string>
    <string name="phone_number">Phone Number</string>
    <string name="registered_businesses">Registered Businesses</string>
    <string name="challenges_answering_customer_questions">Challenges Answering\nCustomer Questions?</string>
    <string name="check_faq_questions">Check FAQ Questions</string>
    <string name="recently_added_businesses">Recently Added Businesses</string>
    <string name="view_all"><u>View All</u></string>
    <string name="add_sme_details">Add SME Details</string>
    <string name="fill_in_all_fields">Fill in all Fields</string>
    <string name="fill_in_biz_details">Fill in Business Details</string>
    <string name="get_consent_to_proceed">Get Consent to Proceed</string>
    <string name="consent_code">Consent Code</string>
    <string name="send">Send</string>
    <string name="wait_to_confirm_consent">Please wait as we confirm the consent</string>
    <string name="consent_success_msg">Great! you can now proceed collecting customer details for scoring</string>
    <string name="amount">Amount</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="fill_in_customer_personal_details">Fill in Customer Personal Details</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="last_name">Last Name</string>
    <string name="national_id">National ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="business_social_media_account">Business Social Media Account</string>
    <string name="facebook_profile_optional">Facebook Profile(Optional)</string>
    <string name="twitter_handle_optional">Twitter Handle(Optional)</string>
    <string name="next">Next</string>
    <string name="instagram_username_optional">Instagram Username(Optional)</string>
    <string name="scroll_to_pick_date">Scroll to Pick Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="relationship">Relationship</string>
    <string name="back">Back</string>
    <string name="add_another">Add Another</string>
    <string name="fill_in_next_of_kin_details">Fill in Next of Kin Details</string>
    <string name="business_name">Business Name</string>
    <string name="number_of_staff">Number of Staff</string>
    <string name="business_industry">Business Industry</string>
    <string name="date_business_began">Date Business Began</string>
    <string name="business_sector">Business Sector</string>
    <string name="size_of_business">Size of Business</string>
    <string name="county_of_business">County of Business</string>
    <string name="sub_county_of_business">Sub-county of Business</string>
    <string name="district_of_business">District of Business</string>
    <string name="planned_use_of_funds">Planned use of Funds</string>
    <string name="business_industries">Business Industries</string>
    <string name="sub_counties">SubCounties</string>
    <string name="select_county">Select County</string>
    <string name="no_counties_found">No Counties Found</string>
    <string name="crb_check_service_fee_instr">Please, note customers will be required to pay X shillings for crb checks as a service fee</string>
    <string name="please_note">Please Note:</string>
    <string name="high_risk_means_sne_has_higher_chances_of_defaulting">High Risk means SNE has higher chances of defaulting</string>
    <string name="key_reasons_for_risk_level">Key reasons for risk level</string>
</resources>
