<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.addSme.consent.ConsentReceivedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_margin">

        <com.pezesha.agent.ui.views.InfoLabel
            android:id="@+id/info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ilContent="@string/wait_to_confirm_consent"
            app:ilIcon="@drawable/loading"
            app:ilTitle="@string/confirming_consent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:visibility="gone"
            app:icon="@drawable/arrow_stick"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_label"
            app:layout_constraintVertical_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

