<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.addSme.kyc.business.BusinessFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_name"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_number_of_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_staff"
            app:layout_constraintTop_toBottomOf="@id/tl_business_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_number_of_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_industry"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_industry"
            app:layout_constraintTop_toBottomOf="@id/tl_number_of_staff">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_biz_industry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_business_began"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tl_business_industry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_sector"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_sector"
            app:layout_constraintTop_toBottomOf="@id/tl_business_date">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_business_sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_size"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/size_of_business"
            app:layout_constraintTop_toBottomOf="@id/tl_business_sector">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_business_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_county"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/county_of_business"
            app:layout_constraintTop_toBottomOf="@id/tl_business_size">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_sub_county"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_county_of_business"
            app:layout_constraintTop_toBottomOf="@id/tl_county">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_sub_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_business_district"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/district_of_business"
            app:layout_constraintTop_toBottomOf="@id/tl_business_sub_county">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_use_of_funds"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/planned_use_of_funds"
            app:layout_constraintTop_toBottomOf="@id/tl_business_district">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_use_of_funds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:enabled="false"
            android:text="@string/next"
            app:icon="@drawable/arrow_stick"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_vertical"
            app:layout_constraintTop_toBottomOf="@id/tl_use_of_funds" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:text="@string/back"
            app:icon="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_use_of_funds" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
