<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.addSme.kyc.personal.PersonalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/main_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name"
            app:layout_constraintTop_toBottomOf="@id/tl_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:layout_constraintTop_toBottomOf="@id/tl_second_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_national_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/national_id"
            app:layout_constraintTop_toBottomOf="@id/tl_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tl_national_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_social_media_account"
            style="@style/DropDownTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_social_media_account"
            app:layout_constraintTop_toBottomOf="@id/tl_date_of_birth">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/et_social_media_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:lines="1"
                android:paddingStart="@dimen/main_margin"
                android:paddingEnd="@dimen/main_margin" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facebook_profile_optional"
            app:layout_constraintTop_toBottomOf="@id/tl_social_media_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_facebook"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/twitter_handle_optional"
            app:layout_constraintTop_toBottomOf="@id/tl_facebook">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_twitter"
                android:layout_width="match_parent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instagram_username_optional"
            app:layout_constraintTop_toBottomOf="@id/tl_twitter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_instagram"
                android:layout_width="match_parent"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="@string/next"
            android:enabled="false"
            app:icon="@drawable/arrow_stick"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guide_vertical"
            app:layout_constraintTop_toBottomOf="@id/tl_instagram" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>